<resources>
    <string name="app_name">Roadtrip Games</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="signup">Create new user</string>
    <string name="skip">Skip</string>
    <string name="username_error">Please enter your username</string>
    <string name="password_error">Please enter your password</string>

    <!-- Signup -->
    <string name="create_user">Create new user</string>
    <string name="confirm_password">Please confirm your password</string>
    <string name="enter_password">Please enter your password</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Number plates -->
    <string name="number_plate_title">Number Plate Game</string>
    <string name="number_plate_search_placeholder">Search a state...</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="complete">You found all of them!</string>
    <string name="play_again">Play again?</string>
    <string name="no_games">You don\'t have any open games at the moment.</string>
    <string name="new_game">Start a new game</string>
    <string name="number_plate_new_game_title">Please enter a name for your new game:</string>
    <string name="number_plate_done">Done</string>
    <string name="number_plate_cancel">Cancel</string>

    <!-- Twenty Questions -->
    <string name="twenty_questions_title">Twenty Questions</string>

    <!-- Menu -->
    <string name="delete_game">Delete</string>
</resources>
