<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/theme_primary"/>

    <TextView
        android:id="@+id/icon_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/xxl_spacing"
        android:background="@drawable/icon_circle"
        android:gravity="center"
        android:text="RT"
        android:textAlignment="center"
        android:textColor="@color/text_on_dark_bg"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxl_spacing"
        android:text="@string/create_user"
        android:textAlignment="center"
        android:textColor="@color/theme_primary"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_view" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/l_spacing"
        android:layout_marginTop="@dimen/xxl_spacing"
        android:layout_marginEnd="@dimen/l_spacing"
        android:backgroundTint="@color/theme_primary"
        android:hint="@string/username"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/l_spacing"
        android:layout_marginTop="@dimen/med_spacing"
        android:layout_marginEnd="@dimen/l_spacing"
        android:backgroundTint="@color/theme_primary"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/l_spacing"
        android:layout_marginTop="@dimen/med_spacing"
        android:layout_marginEnd="@dimen/l_spacing"
        android:backgroundTint="@color/theme_primary"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/l_spacing"
        android:layout_marginTop="@dimen/xxl_spacing"
        android:layout_marginEnd="@dimen/l_spacing"
        android:text="@string/signup"
        android:textColor="@color/text_on_dark_bg"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>