<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary">

    <TextView
        android:id="@+id/icon_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/xxl_spacing"
        android:background="@drawable/icon_circle"
        android:gravity="center"
        android:text="RT"
        android:textAlignment="center"
        android:textColor="@color/text_on_dark_bg"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxl_spacing"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/theme_primary"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_view" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/med_spacing"
        android:layout_marginTop="@dimen/xxl_spacing"
        android:layout_marginEnd="@dimen/med_spacing"
        android:backgroundTint="@color/theme_primary"
        android:hint="@string/username"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/med_spacing"
        android:layout_marginTop="@dimen/med_spacing"
        android:layout_marginEnd="@dimen/med_spacing"
        android:backgroundTint="@color/theme_primary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text_primary"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <CheckBox
        android:id="@+id/stay_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_logged_in"
        android:textSize="@dimen/sm_text_size"
        android:textColor="@color/text_primary"
        android:buttonTint="@color/light_gray"
        android:layout_marginStart="@dimen/med_spacing"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_on_dark_bg"
        android:text="@string/login"
        android:layout_marginStart="@dimen/med_spacing"
        android:layout_marginTop="@dimen/med_spacing"
        android:layout_marginEnd="@dimen/med_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stay_logged_in" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_on_dark_bg"
        android:text="@string/signup"
        android:layout_marginStart="@dimen/med_spacing"
        android:layout_marginTop="@dimen/med_spacing"
        android:layout_marginEnd="@dimen/med_spacing"
        android:backgroundTint="@color/theme_primary_variant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>